--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/popper.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/jquery.minicolors.js"></script>
-<script type="text/javascript" src="js/jquery.dataTables.min.js" ></script>
-<script type="text/javascript" src="js/dataTables.responsive.min.js" ></script>
-<script type="text/javascript" src="js/main.js" ></script>
+<script type="text/javascript" src="./content/js/jquery.min.js"></script>
+<script type="text/javascript" src="./content/js/popper.min.js"></script>
+<script type="text/javascript" src="./content/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="./content/js/jquery.minicolors.js"></script>
+<script type="text/javascript" src="./content/js/jquery.dataTables.min.js" ></script>
+<script type="text/javascript" src="./content/js/dataTables.responsive.min.js" ></script>
+<script type="text/javascript" src="./content/js/main.js" ></script>
 </html>
