--- a/public/index.html
+++ b/public/index.html
@@ -47,4 +47,10 @@
 <script type="text/javascript" src="./content/js/jquery.dataTables.min.js" ></script>
 <script type="text/javascript" src="./content/js/dataTables.responsive.min.js" ></script>
 <script type="text/javascript" src="./content/js/main.js" ></script>
+<script>
+$(document).ready(function() {
+    $('.demo').minicolors();
+});
+
+</script>
 </html>
