working on datatable issue

--- a/public/index.html
+++ b/public/index.html
@@ -40,17 +40,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-<script type="text/javascript" src="./content/js/jquery.min.js"></script>
-<script type="text/javascript" src="./content/js/popper.min.js"></script>
-<script type="text/javascript" src="./content/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="./content/js/jquery.minicolors.js"></script>
-<script type="text/javascript" src="./content/js/jquery.dataTables.min.js" ></script>
-<script type="text/javascript" src="./content/js/dataTables.responsive.min.js" ></script>
-<script type="text/javascript" src="./content/js/main.js" ></script>
-<script>
-$(document).ready(function() {
-    $('.demo').minicolors();
-});
+ 
+<script type="text/javascript" src="%PUBLIC_URL%/content/js/jquery.min.js"></script>
+<script type="text/javascript" src="%PUBLIC_URL%/content/js/jquery-migrate.min.js"></script>
+<script type="text/javascript" src="%PUBLIC_URL%/content/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="%PUBLIC_URL%/content/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="%PUBLIC_URL%/content/js/jquery.dataTables.min.js" ></script>
+<script type="text/javascript" src="%PUBLIC_URL%/content/js/dataTables.responsive.min.js" ></script>
+<script type="text/javascript" src="%PUBLIC_URL%/content/js/main.js" ></script>
+<script type="text/javascript" src="%PUBLIC_URL%/content/js/popper.min.js"></script>
+<script type="text/javascript" src="%PUBLIC_URL%/content/js/jquery.minicolors.js"></script>
 
-</script>
+
 </html>
